GNOME Bugzilla – Bug 739255
Bugus missing property warnings
Last modified: 2014-10-29 09:06:22 UTC
Getting this quite often when connecting or disconnecting: (process:7680): libnm-WARNING **: Could not fetch property 'Vpn' of interface 'org.freedesktop.NetworkManager.Connection.Active' on /org/freedesktop/NetworkManager/ActiveConnection/151: GDBus.Error:org.freedesktop.DBus.Error.UnknownMethod: Method "Get" with signature "ss" on interface "org.freedesktop.DBus.Properties" doesn't exist I guess it's okay to lower the log level to debug as we're ignoring the errors anyway. branch: lr/error http://cgit.freedesktop.org/NetworkManager/NetworkManager/log/?h=lr/error
If you're getting that warning on a successful connection attempt, then we're doing something wrong, and the warning might be pointing out something we need to fix. It's possible that on a disconnection or a failed connection that we would hit that due to a race condition and ignoring it is the right thing. I guess, overall, it's probably fine to make it debug, but if you're getting it on successful connects, can you look into why? (Also, it might be nice to check if the error is UnknownMethod, and if so, log "object disappeared" or something rather than printing out the totally misleading D-Bus error text.)
(In reply to comment #1) > If you're getting that warning on a successful connection attempt, then we're > doing something wrong, and the warning might be pointing out something we need > to fix. > > It's possible that on a disconnection or a failed connection that we would hit > that due to a race condition and ignoring it is the right thing. > > I guess, overall, it's probably fine to make it debug, but if you're getting it > on successful connects, can you look into why? It might be that while we're waiting for the activation to succeed other things happen as well (VPN disconnects due to remote closing the connection, WiFi failing because AP went out of reach, etc.). Indeed my testcase was two "nmcli c up" and "nmcli c down" in loop for different connections at the same time. > (Also, it might be nice to check if the error is UnknownMethod, and if so, log > "object disappeared" or something rather than printing out the totally > misleading D-Bus error text.) It's however impossible to tell the programming bug (a dangling object name for a disposed object as in bug #737659) from a proper object disappearance (as in the case mentioned above) and other events (NM restarted).
Committed as http://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=5aefbe56584f5ca4464275dba81d07a51a205297